# 2021-2

./: Encuadre_Programacion_Estructurada.pptx  Herencia.tar  IndicacionesTarea_Biblioteca_IntroProgUtil.docx  Lista_de_Programas_del_Album_de_Programas_Parcial02.docx  README.md  REF_IEEE_754.txt  TestinNonEmptyFileCreation  TestingNonEmptyFileCreation  workspace_INTRO_PROG-2022_2.workspace  workspace_INTRO_PROG-2022_2.workspace.layout  workspace_INTRO_PROG-2022_2.workspace.layout.old  workspace_INTRO_PROG-2022_2.workspace.old
00_ProcDEvaluacion_INTROPROG_2022_2/: Datos_para_Tareas_del_ProcDEvaluacion_IntroProg_2022-2.txt  parteFinalDeRutaDeArchivo_pdf.txt
00_Proc_de_Evaluacion/: .~lock.Procedimiento_Evaluacion_INTRO_PROG.docx#  Procedimiento_Evaluacion_INTRO_PROG.docx  Procedimiento_Evaluacion_PROG_ESTRUC.docx
01_PRACTICA01/: Practica01_Ambiente_de_Programacion.docx
2022_2/: workspace_INTRO_PROG-2022_2.workspace  workspace_INTRO_PROG-2022_2.workspace.layout
IntroProgUnidad02/: .config  .config.old  ArregloBidimensional.c  IntroProgUnidad02.cbp  IntroProgUnidad02.depend  IntroProgUnidad02.layout  IntroProgUnidad02_util.c  IntroProgUnidad02_util.h  IntroProgUnidad02_util.h.old  IntroProgUnidad02_util.h.orig20220605  Kconfig  Makefile_win  PO_DiaNumDLab.h  PO_DiaNumDLab.h.old  TestFor.c  autoconf.h  fib_dw.c  fib_f.c  fib_w.c  fib_w_goto.c  main.c  switch_eg.c
IntroProgUtil/: IntroProgUnidad02_util.h  IntroProgUtil.c  IntroProgUtil.cbp  IntroProgUtil.depend  IntroProgUtil.layout  copy_matriz.c  (+6 more)
Proyecto05/BASE_DIR/11FuncionesYCadenas/: CMakeLists.txt  Example_7_5.c
(+461 files in other folders)
