#REF:
#Craig Scott - Professional CMake_ A Practical Guide (2018).pdf
#Pag. 10 (19/429)
cmake_minimum_required(VERSION 3.19)
project(11_Funciones_y_Cadenas)
add_executable(11_Test_Funciones_y_Cadenas Example_7_5.c )
#add_custom_target(
#  BuildDocs ALL
#  DEPENDS button.headers
#  DEPENDS main.headers
#  DEPENDS Project_static_event_table02.exe
#)

#add_custom_command ( OUTPUT button.headers
#COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/script_para_obtener_button_headers.sh
#            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/)
#
#add_custom_command ( OUTPUT main.headers
#COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/script_para_obtener_main_headers.sh
#            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/)

#add_custom_command ( OUTPUT Project_static_event_table02.exe
#COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/script_Project_static_event_table_exe.sh
#            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/)

